examples/k8s/01_deployment.yaml
---
# Deployment
# this is distill, since it uses an embedded db
# it cant really scale behind 1 replica
kind: Deployment
metadata:
  labels:
    app: distill
  name: distill
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: distill
  template:
    metadata:
      labels:
        app: distill
    spec:
      containers:
      - env:
        # this is an example, a better alternative would be to use 
        # a k8s secret or config map
        - name: DISTILL_SERVER_API_KEY
          value: theapikeytouse
        image: noandrea/distill
        imagePullPolicy: Always
        name: distill
        ports:
        - name: http
          containerPort: 1804
        # persist the db file on a persistent volume
        volumeMounts:
        - name: distill-data
          mountPath: /data
      volumes:
      - name: distill-data
        persistentVolumeClaim:
          claimName: distill-data


---
# Service 
# the service for the above deployment
apiVersion: v1
kind: Service
metadata:
  name: distill-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: distill
