examples/k8s/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: distill-service
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: distill
